# addok-fr

./: .gitignore  LICENSE  MANIFEST.in  Makefile  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: ci.yml
addok_fr/: __init__.py  plugin.py  utils.py
addok_fr/resources/: synonyms.txt
tests/: conftest.py  test_cache.py  test_utils.py
